# gaming-highlight-gen

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
game_configs/: default.yaml  r6.yaml  valorant.yaml
gaming_highlight_gen/: __init__.py  cli.py  logging_setup.py
gaming_highlight_gen/adapters/: __init__.py  base.py  default_adapter.py  valorant_adapter.py
gaming_highlight_gen/config/: game_config.py  global_config.py
gaming_highlight_gen/core/: ffmpeg_wrapper.py  pipeline.py  renderer.py
gaming_highlight_gen/detectors/: __init__.py  audio_detector.py  base.py  composite_scorer.py  ml_detector.py  visual_detector.py
gaming_highlight_gen/models/: moment.py
tests/: conftest.py  test_adapters.py  test_audio_detector.py  test_cli.py  test_composite_scorer.py  test_config.py  test_ffmpeg_wrapper.py  test_pipeline.py  test_renderer.py  test_visual_detector.py
tests/fixtures/: README.md  generate_fixtures.py
